--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
                 <div class="text">Caption Three</div>
             </div>
 
+            <div class="mySlides fade">
+                <div class="numbertext">4 / 4</div>
+                <img src="https://picsum.photos/1080/720" />
+                <div class="text">Caption Four</div>
+            </div>
+
             <!-- Next and previous buttons -->
             <a class="prev">&#10094;</a>
             <a class="next">&#10095;</a>
@@ -39,6 +45,7 @@
 
         <!-- The dots/circles -->
         <div style="text-align: center">
+            <span class="dot"></span>
             <span class="dot"></span>
             <span class="dot"></span>
             <span class="dot"></span>
